@@ -7,9 +7,11 @@ ChangeLog:
 Version 0.6 - May 16 2009
 Codename: "Spring"
 ----------------------------
+- GraphML becomes the native load/save format.
+- New rounded rectangle shape for nodes.
+- The GraphML parser recognizes XML.
 - New version name scheme (0.5 < 0.6 < 0.7 etc). 0.6.x will be used for
 bugfixes.
-- Improved GraphML support.
 
 
 Version 0.51 - Feb 16 2009
